--- a/app/src/main/res/layout/fragment_exhibits.xml
+++ b/app/src/main/res/layout/fragment_exhibits.xml
@@ -7,14 +7,11 @@
     tools:context=".ExhibitsFragment">
 
 
-    <Button
-        android:id="@+id/get_button"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_parent"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:text="get"
-        android:textColor="@color/design_default_color_on_secondary"
-        android:backgroundTint="@color/design_default_color_on_primary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
