Added Glide for loading Exhibits images

--- a/app/src/main/res/layout/exhibits_parent_list_item.xml
+++ b/app/src/main/res/layout/exhibits_parent_list_item.xml
@@ -5,10 +5,8 @@
     android:id="@+id/Parent_recycler_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:layout_margin="2dp"
     card_view:cardBackgroundColor="#fff"
-    card_view:cardCornerRadius="5dp"
+    card_view:cardCornerRadius="4dp"
     card_view:cardElevation="4dp"
     card_view:cardUseCompatPadding="true">
 
@@ -23,20 +21,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/rv_exhibit_images"
             android:padding="20dp"
             android:text="Hello World"
-            android:textColor="@color/design_default_color_primary"
+            android:textColor="@color/design_default_color_on_secondary"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_exhibit_images"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:padding="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="74dp" />
 
