--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+  <androidx.appcompat.widget.Toolbar
+      android:id="@+id/my_toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="?attr/colorPrimary"
+      android:elevation="4dp"
+      app:layout_constraintTop_toTopOf="parent"
+      android:backgroundTint="@color/design_default_color_on_secondary"
+      app:title="EXHIBITS"
+      app:titleTextColor="@color/design_default_color_error"
+      app:titleMarginStart="10dp"
+      />
+
+
   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragment_container_view_tag"
+      android:layout_marginTop="5dp"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:name="com.example.crop2cash.ExhibitsFragment"/>
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toBottomOf="@id/my_toolbar"
+      android:name="com.example.crop2cash.view.ExhibitsFragment"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
